{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 9,
  "lineage": "6520443b-3836-f22c-a758-1be11aee9b54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0719d43d51633f9a9",
            "domain": "vpc",
            "id": "eipalloc-e594f6ec",
            "network_border_group": "us-west-1",
            "network_interface": "eni-09ea38bece9338aae",
            "private_dns": "ip-10-0-1-50.us-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-50-18-109-70.us-west-1.compute.amazonaws.com",
            "public_ip": "50.18.109.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.zennit-gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.zennit-allow-web",
            "aws_subnet.zennit-subnet1",
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zennit_test",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d382e80be7ffdae5",
            "arn": "arn:aws:ec2:us-west-1:338586432812:instance/i-0df420326d14189d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df420326d14189d0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-zennit-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-09ea38bece9338aae"
              }
            ],
            "primary_network_interface_id": "eni-09ea38bece9338aae",
            "private_dns": "ip-10-0-1-50.us-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "50.18.109.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b0403dd2baa6448",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0855e85b48997664d",
            "tags": {
              "Name": "zennit-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04f90179eac1aff09"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.zennit-allow-web",
            "aws_subnet.zennit-subnet1",
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zennit-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338586432812:internet-gateway/igw-0bd056e38d9e3705b",
            "id": "igw-0bd056e38d9e3705b",
            "owner_id": "338586432812",
            "tags": {
              "Name": "zennit-gw"
            },
            "vpc_id": "vpc-0dc79a5820ed6afad"
          },
          "dependencies": [
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-09ea38bece9338aae",
            "ipv6_address_count": 0,
            "mac_address": "02:ec:69:92:4e:d5",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04f90179eac1aff09"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0855e85b48997664d"
          },
          "dependencies": [
            "aws_security_group.zennit-allow-web",
            "aws_subnet.zennit-subnet1",
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zennit-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338586432812:route-table/rtb-092692c1cfafe6ff6",
            "id": "rtb-092692c1cfafe6ff6",
            "owner_id": "338586432812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd056e38d9e3705b",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd056e38d9e3705b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zennit-rt"
            },
            "vpc_id": "vpc-0dc79a5820ed6afad"
          },
          "dependencies": [
            "aws_internet_gateway.zennit-gw",
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zennit-rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004cefd94b267a73d",
            "route_table_id": "rtb-092692c1cfafe6ff6",
            "subnet_id": "subnet-0855e85b48997664d"
          },
          "dependencies": [
            "aws_internet_gateway.zennit-gw",
            "aws_route_table.zennit-rt",
            "aws_subnet.zennit-subnet1",
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zennit-allow-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338586432812:security-group/sg-04f90179eac1aff09",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f90179eac1aff09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "zennit_allow_web",
            "name_prefix": "",
            "owner_id": "338586432812",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc79a5820ed6afad"
          },
          "dependencies": [
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zennit-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338586432812:subnet/subnet-0855e85b48997664d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0855e85b48997664d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338586432812",
            "tags": {
              "Name": "zennit-prod-subnet"
            },
            "tags_all": {
              "Name": "zennit-prod-subnet"
            },
            "vpc_id": "vpc-0dc79a5820ed6afad"
          },
          "dependencies": [
            "aws_vpc.zennit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zennit-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338586432812:vpc/vpc-0dc79a5820ed6afad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba157ce4f9964213",
            "default_route_table_id": "rtb-042531305be18dd32",
            "default_security_group_id": "sg-06a94719b95ba04ac",
            "dhcp_options_id": "dopt-e306f885",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dc79a5820ed6afad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042531305be18dd32",
            "owner_id": "338586432812",
            "tags": {
              "Name": "zennit-prod"
            },
            "tags_all": {
              "Name": "zennit-prod"
            }
          }
        }
      ]
    }
  ]
}